@@ -4,6 +4,9 @@
  - (dtucker) [auth-pam.c] Use an invalid password for root if
    PermitRootLogin != yes or the login is invalid, to prevent leaking
    information.  Based on Openwall's owl-always-auth patch.  ok djm@
+ - (tim) [configure.ac Makefile.in] Add support for "make package" ok djm@
+ - (tim) [buildpkg.sh.in] New file. A more flexible version of
+   contrib/solaris/buildpkg.sh used for "make package".
 
 20040527
  - (dtucker) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec
@@ -1170,4 +1173,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3370 2004/05/30 12:04:56 dtucker Exp $
+$Id: ChangeLog,v 1.3371 2004/05/31 04:38:51 tim Exp $
